<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="设置"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_setting_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/myStyleX"
                android:text="@string/setting_center_point" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    style="@style/myStyle"
                    android:text="@string/setting_center_latitude"
                    android:id="@+id/tv_setting_center_latitude"
                    />
                <TextView
                    style="@style/myStyle"
                    android:id="@+id/tv_setting_center_longitude"
                    android:text="@string/setting_center_longitude" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_setting_radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                style="@style/myStyleX"
                android:text="@string/setting_distance" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/myStyle"
                    android:id="@+id/tv_setting_radius"
                    android:layout_weight="1"
                    android:text="@string/setting_radius" />

                <!--<TextView-->
                <!--android:id="@+id/tv_setting_radius_unit"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="5dp"-->
                <!--android:layout_weight="3"-->
                <!--android:text="@string/setting_radius_unit"-->
                <!--android:textColor="@color/settings_text"-->
                <!--android:textSize="15sp" />-->
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_setting_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                style="@style/myStyleX"
                android:text="@string/setting_time_notification" />

            <TextView
                android:id="@+id/tv_setting_time_notification_long"
                style="@style/myStyle"
                android:text="@string/setting_time_notification_long" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_setting_auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                style="@style/myStyleX"
                android:text="@string/setting_time_auto" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/myStyle"
                    android:id="@+id/tv_setting_time_auto_start"
                    android:text="@string/setting_time_auto_start" />

                <TextView
                    android:id="@+id/tv_setting_time_auto_stop"
                    style="@style/myStyle"
                    android:text="@string/setting_time_auto_stop" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/ll_setting_review"
            style="@style/myStyleX"
            android:layout_marginTop="20dp"
            android:text="@string/setting_review"
/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_settings_save"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="120dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/input_shape"
        android:text="@string/setting_save"
        android:textSize="20sp" />
</LinearLayout>