<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:divider="@color/colorPrimary"
            android:hint="@string/user_name"
            android:inputType="text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/colorPrimary"
            android:hint="@string/user_password"
            android:inputType="numberPassword"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/et_register_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/colorPrimary"
            android:hint="@string/password_confirm"
            android:inputType="numberPassword"
            android:textSize="20sp" />
        <Button
            android:id="@+id/btn_register"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:background="@drawable/input_shape"
            android:textSize="20sp" />

    </LinearLayout>
</LinearLayout>